# isr-rl-dmpc

./: .gitignore  LICENSE  README.md  environment.yml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup_and_train.sh
.mplconfig/: fontlist-v390.json
config/: default_config.yaml  dmpc_config.yaml  drone_specs.yaml  foxglove_config.yaml  foxglove_layout.json  learning_config.yaml  mappo_config.yaml  mission_scenarios.yaml  sensor_specs.yaml
dashboard/: README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  FOXGLOVE_INTEGRATION.md  GYM_DESIGN.md  MATH_OPTIMIZATION.md  MODULE_SPECS.md  PHASE_GUIDE.md  STABILITY_ANALYSIS.md  TRAINING.md  TROUBLESHOOTING.md  TUNING_GUIDE.md  WORKFLOW.md
math_docs/: 01_DRONE_STATE_SPACE.md  02_EXTENDED_KALMAN_FILTER.md  03_DMPC_FORMULATION.md  04_LYAPUNOV_AND_STABILITY.md  05_FORMATION_CONSENSUS.md  06_TASK_ALLOCATION.md  07_GEOMETRIC_ATTITUDE_CONTROL.md  08_COVERAGE_PLANNING.md  09_MAPPO_AGENT.md  10_ADMM_CONSENSUS.md  README.md
notebooks/: 01_quick_start.ipynb  01_system_overview.ipynb  02_dmpc_deep_dive.ipynb  02_module_testing.ipynb  03_learning_curves.ipynb  04_mission_analysis.ipynb  05_comparison_analysis.ipynb
pybullet_sim/: __init__.py  swarm_pybullet_sim.py
requirements/: base.txt  (+2 more)
ros2_ws/src/isr_dmpc_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/isr_dmpc_sim/config/: simulation.rviz
ros2_ws/src/isr_dmpc_sim/isr_dmpc_sim/: __init__.py  hardware_bridge_node.py  rviz_bridge_node.py  swarm_dmpc_sim_node.py
ros2_ws/src/isr_dmpc_sim/launch/: swarm_simulation.launch.py
ros2_ws/src/isr_dmpc_sim/urdf/: drone.urdf
(+121 files in other folders)
